; ModuleID = '/home/carl/AnghaBench/vlc/modules/mux/extr_asf.c_bo_addle_str16_nosize.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/mux/extr_asf.c_bo_addle_str16_nosize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @bo_addle_str16_nosize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bo_addle_str16_nosize(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8, align 1
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  br label %6

6:                                                ; preds = %17, %2
  %7 = load i8*, i8** %4, align 8
  %8 = getelementptr inbounds i8, i8* %7, i32 1
  store i8* %8, i8** %4, align 8
  %9 = load i8, i8* %7, align 1
  store i8 %9, i8* %5, align 1
  %10 = load i32*, i32** %3, align 8
  %11 = load i8, i8* %5, align 1
  %12 = call i32 @bo_addle_u16(i32* %10, i8 signext %11)
  %13 = load i8, i8* %5, align 1
  %14 = sext i8 %13 to i32
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %6
  br label %18

17:                                               ; preds = %6
  br label %6

18:                                               ; preds = %16
  ret void
}

declare dso_local i32 @bo_addle_u16(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
